--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 # misc
 .DS_Store
+/**/.DS_Store
 .env.local
 .env.development.local
 .env.test.local
@@ -18,5 +19,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/**/npm-debug.log*
+/**/yarn-debug.log*
+/**/yarn-error.log*
 /output
 output/
+/**/output
+
